--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
 
     #root {
       display: flex;
-      align-content: center;
+      flex: 1;
       align-items: center;
-      height: 100%;
+      justify-content: center;
     }
   </style>
   <!--
