--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 
 
   <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 
 </html>
