--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,12 @@
 
   <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-1885725169510443",
+      enable_page_level_ads: true
+    });
+  </script>
 </body>
 
 </html>
